--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <a href="#">WebStudio</a>
+        <header class="header">
+            <a class="logo-header" href="index.html"> <span class="logo-color">Web</span>Studio</a>
                 <nav>
-                    <ul>
-                        <li><a href="#">Студия</a></li>
-                        <li><a href="#">Портфолио</a></li>
+                    <ul class="table table-nav">
+                        <li><a href="index.html">Студия</a></li>
+                        <li><a href="portfolio.html">Портфолио</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
                 </nav>
-                    <ul>
+                    <ul class="table table-info">
                         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
         </header>
         <main>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
+            <section class="main-section">
+                <h1>Эффективные решения<br> для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
-            <section>
-                <ul>
+            <section class="section-info">
+                <ul class="table ">
                     <li>
                         <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -48,7 +52,7 @@
             </section>
             <section>
                 <h2>Чем мы занимаемся</h2>
-                <ul>
+                <ul class="table">
                     <li><img src="./images/box1.jpg" alt="photo" width="370"></li>
                     <li><img src="./images/box2.jpg" alt="photo" width="370"></li>
                     <li><img src="./images/box3.jpg" alt="photo" width="370"></li>
@@ -56,7 +60,7 @@
             </section>
             <section>
                 <h2>Наша команда</h2>
-                <ul>
+                <ul class="table">
                     <li>
                         <img src="./images/team1.jpg" alt="photo" width="270">
                         <h3>Игорь Демьяненко</h3>
@@ -81,10 +85,10 @@
             </section>
         </main>
         <footer>
-            <a href="#">WebStudio</a>
+            <a class="logo" href="index.html"> <span class="logo-color">Web</span>Studio</a>
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <ul>
+                <ul class="table">
                     <li><a href="mailto:info@example.com">info@example.com</a></li>
                     <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
                 </ul>
