--- a/index.html
+++ b/index.html
@@ -11,86 +11,86 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="header">
-            <a class="logo-header" href="index.html"> <span class="logo-color">Web</span>Studio</a>
+        <header>
+            <a class="logo-header" href="./index.html"> <span class="logo-color">Web</span>Studio</a>
                 <nav>
-                    <ul class="table table-nav">
-                        <li><a href="index.html">Студия</a></li>
-                        <li><a href="portfolio.html">Портфолио</a></li>
-                        <li><a href="#">Контакты</a></li>
+                    <ul>
+                        <li><a class="table-nav" href="./index.html">Студия</a></li>
+                        <li><a class="table-nav" href="./portfolio.html">Портфолио</a></li>
+                        <li><a class="table-nav" href="#">Контакты</a></li>
                     </ul>
                 </nav>
-                    <ul class="table table-info">
-                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <ul class="table-info">
+                        <li><a class="table-info-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="table-info-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
         </header>
         <main>
             <section class="main-section">
-                <h1>Эффективные решения<br> для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+                <h1 class="main-title">Эффективные решения<br> для вашего бизнеса</h1>
+                <button class="main-btm" type="button">Заказать услугу</button>
             </section>
-            <section class="section-info">
-                <ul class="table ">
+            <section>
+                <ul>
                     <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="main-subtitle" >Внимание к деталям</h3>
+                        <p class="main-text" >Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="main-subtitle" >Пунктуальность</h3>
+                        <p class="main-text" >Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="main-subtitle" >Планирование</h3>
+                        <p class="main-text" >Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="main-subtitle" >Современные технологии</h3>
+                        <p class="main-text" >Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </section>
             <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul class="table">
+                <h2 class="section-subtitle">Чем мы занимаемся</h2>
+                <ul>
                     <li><img src="./images/box1.jpg" alt="photo" width="370"></li>
                     <li><img src="./images/box2.jpg" alt="photo" width="370"></li>
                     <li><img src="./images/box3.jpg" alt="photo" width="370"></li>
                 </ul>
             </section>
             <section>
-                <h2>Наша команда</h2>
-                <ul class="table">
+                <h2 class="section-subtitle">Наша команда</h2>
+                <ul>
                     <li>
                         <img src="./images/team1.jpg" alt="photo" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p>Product Designer</p>  
+                        <h3 class="section-trainer" >Игорь Демьяненко</h3>
+                        <p class="coach-profession" >Product Designer</p>  
                     </li>
                     <li>
                         <img src="./images/team2.jpg" alt="photo" width="270">
-                        <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="section-trainer" >Ольга Репина</h3>
+                        <p class="coach-profession" >Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/team3.jpg" alt="photo" width="270">
-                        <h3>Николай Тарасов</h3>
-                        <p>Marketing</p>
+                        <h3 class="section-trainer" >Николай Тарасов</h3>
+                        <p class="coach-profession" >Marketing</p>
                     </li>
                     <li>
                         <img src="./images/team4.jpg" alt="photo" width="270">
-                        <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p> 
+                        <h3 class="section-trainer" >Михаил Ермаков</h3>
+                        <p class="coach-profession" >UI Designer</p> 
                     </li>
                 </ul>
             </section>
         </main>
-        <footer>
-            <a class="logo" href="index.html"> <span class="logo-color">Web</span>Studio</a>
+        <footer class="footer">
+            <a class="footer-logo" href="./index.html"> <span class="footer-logo-color">Web</span>Studio</a>
             <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="table">
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <p class="footer-addres">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li><a class="footer-info-link" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="footer-info-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
