--- a/portfolio.html
+++ b/portfolio.html
@@ -12,84 +12,84 @@
     
 </head>
 <body>
-    <header class="header">
-        <a class="logo-header" href="index.html"> <span class="logo-color">Web</span>Studio</a>
+    <header>
+        <a class="logo-header" href="./index.html"> <span class="logo-color">Web</span>Studio</a>
             <nav>
-                <ul class="table table-nav">
-                    <li><a href="index.html">Студия</a></li>
-                    <li><a href="portfolio.html">Портфолио</a></li>
-                    <li><a href="#">Контакты</a></li>
+                <ul>
+                    <li><a class="table-nav" href="./index.html">Студия</a></li>
+                    <li><a class="table-nav" href="./portfolio.html">Портфолио</a></li>
+                    <li><a class="table-nav" href="#">Контакты</a></li>
                 </ul>
             </nav>
-                <ul class="table table-info">
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <ul class="table-info">
+                    <li><a class="table-info-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="table-info-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
     </header>
     <main>
-        <ul class="table">
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <ul>
+            <li><button class="main-btm-content activ-btm" type="button">Все</button></li>
+            <li><button class="main-btm-content" type="button">Веб-сайты</button></li>
+            <li><button class="main-btm-content" type="button">Приложения</button></li>
+            <li><button class="main-btm-content" type="button">Дизайн</button></li>
+            <li><button class="main-btm-content" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="table">
+        <ul>
             <li>
-                <img src="./images/img-group1.jpg" alt="photo" width="322">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <img src="./images/img-group1.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Технокряк</h3>
+                <p class="main-web" >Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/img-group2.jpg" alt="photo" width="322">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <img src="./images/img-group2.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Постер New Orlean vs Golden Star</h3>
+                <p class="main-web" >Дизайн</p>
             </li>
             <li>
-                <img src="./images/img-group3.jpg" alt="photo" width="322">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <img src="./images/img-group3.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Ресторан Seafood</h3>
+                <p class="main-web" >Приложение</p>
             </li>
             <li>
-                <img src="./images/img-group4.jpg" alt="photo" width="322">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <img src="./images/img-group4.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Проект Prime</h3>
+                <p class="main-web" >Маркетинг</p>
             </li>
             <li>
-                <img src="./images/img-group5.jpg" alt="photo" width="322">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <img src="./images/img-group5.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Проект Boxes</h3>
+                <p class="main-web" >Приложение</p>
             </li>
             <li>
-                <img src="./images/img-group6.jpg" alt="photo" width="322">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <img src="./images/img-group6.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Inspiration has no Borders</h3>
+                <p class="main-web" >Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/img-group7.jpg" alt="photo" width="322">
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <img src="./images/img-group7.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Издание Limited Edition</h3>
+                <p class="main-web" >Дизайн</p>
             </li>
             <li>
-                <img src="./images/img-group8.jpg" alt="photo" width="322">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <img src="./images/img-group8.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Проект LAB</h3>
+                <p class="main-web" >Маркетинг</p>
             </li>
             <li>
-                <img src="./images/img-group9.jpg" alt="photo" width="322">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <img src="./images/img-group9.jpg" alt="photo" width="370">
+                <h3 class="main-project" >Growing Business</h3>
+                <p class="main-web" >Приложение</p>
             </li>
         </ul>
 
     </main>
-    <footer>
-        <a class="logo" href="index.html"> <span class="logo-color">Web</span>Studio</a>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html"> <span class="footer-logo-color">Web</span>Studio</a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="table">
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <p class="footer-addres">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li><a class="footer-info-link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="footer-info-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
