--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <a class="logo-header" href="./index.html"> <span class="logo-color">Web</span>Studio</a>
                 <nav>
                     <ul>
-                        <li><a class="table-nav" href="./index.html">Студия</a></li>
+                        <li><a class="table-nav activ" href="./index.html">Студия</a></li>
                         <li><a class="table-nav" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="table-nav" href="#">Контакты</a></li>
+                        <li><a class="table-nav" href="">Контакты</a></li>
                     </ul>
                 </nav>
                     <ul class="table-info">
@@ -27,7 +27,7 @@
         </header>
         <main>
             <section class="main-section">
-                <h1 class="main-title">Эффективные решения<br> для вашего бизнеса</h1>
+                <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="main-btm" type="button">Заказать услугу</button>
             </section>
             <section>
@@ -58,7 +58,7 @@
                     <li><img src="./images/box3.jpg" alt="photo" width="370"></li>
                 </ul>
             </section>
-            <section>
+            <section class="trainer">
                 <h2 class="section-subtitle">Наша команда</h2>
                 <ul>
                     <li>
