--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
             <nav>
                 <ul>
                     <li><a class="table-nav" href="./index.html">Студия</a></li>
-                    <li><a class="table-nav" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="table-nav" href="#">Контакты</a></li>
+                    <li><a class="table-nav activ" href="./portfolio.html">Портфолио</a></li>
+                    <li><a class="table-nav" href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="table-info">
