--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </main>
         <footer class="footer">
             <a class="footer-logo" href="./index.html"> <span class="footer-logo-color">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <p class="footer-addres">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul>
                     <li><a class="footer-info-link" href="mailto:info@example.com">info@example.com</a></li>
