--- a/portfolio.html
+++ b/portfolio.html
@@ -27,65 +27,86 @@
                 </ul>
     </header>
     <main>
-        <ul>
-            <li><button class="main-btm-content activ-btm" type="button">Все</button></li>
-            <li><button class="main-btm-content" type="button">Веб-сайты</button></li>
-            <li><button class="main-btm-content" type="button">Приложения</button></li>
-            <li><button class="main-btm-content" type="button">Дизайн</button></li>
-            <li><button class="main-btm-content" type="button">Маркетинг</button></li>
-        </ul>
-        <ul>
-            <li>
-                <img src="./images/img-group1.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Технокряк</h3>
-                <p class="main-web" >Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/img-group2.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Постер New Orlean vs Golden Star</h3>
-                <p class="main-web" >Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/img-group3.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Ресторан Seafood</h3>
-                <p class="main-web" >Приложение</p>
-            </li>
-            <li>
-                <img src="./images/img-group4.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Проект Prime</h3>
-                <p class="main-web" >Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/img-group5.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Проект Boxes</h3>
-                <p class="main-web" >Приложение</p>
-            </li>
-            <li>
-                <img src="./images/img-group6.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Inspiration has no Borders</h3>
-                <p class="main-web" >Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/img-group7.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Издание Limited Edition</h3>
-                <p class="main-web" >Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/img-group8.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Проект LAB</h3>
-                <p class="main-web" >Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/img-group9.jpg" alt="photo" width="370">
-                <h3 class="main-project" >Growing Business</h3>
-                <p class="main-web" >Приложение</p>
-            </li>
-        </ul>
-
+        <section>
+            <ul>
+                <li><button class="main-btm-content activ-btm" type="button">Все</button></li>
+                <li><button class="main-btm-content" type="button">Веб-сайты</button></li>
+                <li><button class="main-btm-content" type="button">Приложения</button></li>
+                <li><button class="main-btm-content" type="button">Дизайн</button></li>
+                <li><button class="main-btm-content" type="button">Маркетинг</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group1.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Технокряк</h3>
+                        <p class="main-web" >Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group2.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Постер New Orlean vs Golden Star</h3>
+                        <p class="main-web" >Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group3.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Ресторан Seafood</h3>
+                        <p class="main-web" >Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group4.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Проект Prime</h3>
+                        <p class="main-web" >Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group5.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Проект Boxes</h3>
+                        <p class="main-web" >Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                        <img src="./images/img-group6.jpg" alt="photo" width="370">
+                        <h3 class="main-project" >Inspiration has no Borders</h3>
+                        <p class="main-web" >Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                    <img src="./images/img-group7.jpg" alt="photo" width="370">
+                    <h3 class="main-project" >Издание Limited Edition</h3>
+                    <p class="main-web" >Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                    <img src="./images/img-group8.jpg" alt="photo" width="370">
+                    <h3 class="main-project" >Проект LAB</h3>
+                    <p class="main-web" >Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-project" href="">
+                    <img src="./images/img-group9.jpg" alt="photo" width="370">
+                    <h3 class="main-project" >Growing Business</h3>
+                    <p class="main-web" >Приложение</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="footer">
         <a class="footer-logo" href="./index.html"> <span class="footer-logo-color">Web</span>Studio</a>
-        <address>
+        <address class="address">
             <p class="footer-addres">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><a class="footer-info-link" href="mailto:info@example.com">info@example.com</a></li>
